test/tasty/neg-full-circle/src-3-app/TestExperimentalDefsPre.check
-- Error: TestExperimentalDefsPre_fail.scala:1:18
1 |import downstream.ExperimentalDefsPre.*
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |       Experimental definition may only be used under experimental mode:
  |         1. in a definition marked as @experimental, or
  |         2. compiling with the -experimental compiler flag, or
  |         3. with a nightly or snapshot version of the compiler.
  |
  |       object ExperimentalDefsPre is marked @experimental
  |
-- Error: TestExperimentalDefsPre_fail.scala:4:10
4 |  def test = new SubExperimentalNotExperimental
  |          ^
  |         Experimental definition may only be used under experimental mode:
  |           1. in a definition marked as @experimental, or
  |           2. compiling with the -experimental compiler flag, or
  |           3. with a nightly or snapshot version of the compiler.
  |
  |         object ExperimentalDefsPre is marked @experimental
  |
-- Error: TestExperimentalDefsPre_fail.scala:4:17
4 |  def test = new SubExperimentalNotExperimental
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         Experimental definition may only be used under experimental mode:
  |           1. in a definition marked as @experimental, or
  |           2. compiling with the -experimental compiler flag, or
  |           3. with a nightly or snapshot version of the compiler.
  |
  |         object ExperimentalDefsPre is marked @experimental
  |
-- Error: TestExperimentalDefsPre_fail.scala:6:35
6 |  class SubSubExperimental extends SubExperimentalNotExperimental
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         Experimental definition may only be used under experimental mode:
  |           1. in a definition marked as @experimental, or
  |           2. compiling with the -experimental compiler flag, or
  |           3. with a nightly or snapshot version of the compiler.
  |
  |         object ExperimentalDefsPre is marked @experimental
  |
4 errors found
